--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<p>Should contain the text "We can optimize a solution using both time and space optimization. To optimize a program
+	</p>
+	<ol>We can reduce the time taken to run the program and increase the space occupied</ol>
+	<ol>We can reduce the memory usage of the program and increase it's total run time</ol>
+	<ol>We can reduce both time and space complexity by deploying relevant algorithms</ol>
+	
+	
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
